Fixed header dropdown z-index and associated account dialog css.

--- a/static/manage/css/global.2.0.css
+++ b/static/manage/css/global.2.0.css
@@ -172,6 +172,7 @@ div#header-right {
 	   can use left, right, top, and bottom properties relative to the
 	   parent and not the window itself! */
 	position:relative; 
+	z-index: 10;
 }
 
 div#header-right > a {
