--- a/static/public/css/global.2.3.css
+++ b/static/public/css/global.2.3.css
@@ -1079,7 +1079,8 @@ float: right;
 
 #associated-account-form {
     margin-top: 10px;
-	margin-left: 26px;
+    margin-left : auto; margin-right : auto;
+	background:yellow;
 }
 
 #associated-account-form input {
@@ -1092,6 +1093,8 @@ float: right;
 #associated-account-form input[type=submit] {
     font-weight:bold;
     width: 120px;
+    background: green;
+    margin-left : auto; margin-right : auto;
 }
 
 
